--- a/.github/workflows/m3u_Generator.yml
+++ b/.github/workflows/m3u_Generator.yml
@@ -8,7 +8,7 @@ on:
     # Run at :01 past each hour from 00:00 to 17:59 UTC
     # (Approx 05:31 AM to 11:01 PM Sri Lanka Time)
     # 18 runs per day × ~44 sec = ~13 min/day = ~6.5 hours/month
-    - cron: '1 0-17 * * *'
+    - cron: '31 0-17 * * *'
 
   pull_request:
     branches:
@@ -18,6 +18,9 @@ on:
   workflow_dispatch:
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
+permissions:
+  contents: write
+
 jobs:
   # This workflow contains a single job called "build"
   build:
@@ -28,6 +31,9 @@ jobs:
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v4
+        with:
+          persist-credentials: true
+          fetch-depth: 0
 
       # Setup Python
       - name: Setup Python
@@ -49,12 +55,14 @@ jobs:
         env:
           YT_COOKIES: ${{ secrets.YT_COOKIES }}
 
-      - name: git add
+      - name: Commit & push
+        env:
+          GIT_PUSH_TOKEN: ${{ secrets.GIT_PUSH_TOKEN }}
         run: |
           git add -A
-          ls -la
-
-      - name: commit & push
-        run: |
           git diff-index --quiet HEAD || git commit -m "links are updated"
-          git push
+          if [ -n "$GIT_PUSH_TOKEN" ]; then
+            git push https://x-access-token:${GIT_PUSH_TOKEN}@github.com/${{ github.repository }} HEAD:${{ github.ref_name }}
+          else
+            git push
+          fi
